<?xml version="1.0" encoding="utf-8"?>
<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/master_list_fragment_recipe"
    android:name="com.rahmat.codelab.bakingapp.RecipeMasterListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />