<resources>
    <string name="app_name">Baking App</string>
    <string name="appwidget_text">RECIPE INGREDIENTS WILL APPEAR HERE AFTER LAUNCHING</string>
    <string name="imgthumbnail">imgthumbnail</string>
    <string name="list_of_igridients">List of Igridients</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>
