<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/videoplayer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="0dp"/>

    <ImageView
        android:id="@+id/thumbnail"
        android:contentDescription="@string/imgthumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/recipe_step_textview"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_height="50dp">

        <Button
            android:id="@+id/btn_prev"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/previous"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/next"/>
    </LinearLayout>
</RelativeLayout>

</LinearLayout>


